fix spacing and displays for upcoming faire, shed and facilitator event elementor widgets

--- a/wp-content/plugins/make-elementor-widgets/css/style.css
+++ b/wp-content/plugins/make-elementor-widgets/css/style.css
@@ -106,6 +106,9 @@
 	margin: 0px;
 	padding: 20px;
 }
+.elementor-widget-upcomingmakerfaires h4 {
+	border-bottom: 30px solid #FAFBFD;
+}
 .elementor-widget-upcomingmakerfaires ul li {
 	margin-bottom: 15px;
 }
